fix: Optimized the height of the modal box and the display of the close button on mobile devices. (#1786)

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -871,3 +871,8 @@ If your plugin does not need CSS, delete this file.
   color: var(--text-error);
   opacity: 1;
 }
+
+/* Maybe ob's error removed the hierarchy, so add hierarchy to the modal box on mobile for now */
+.is-phone .modal .modal-close-button {
+  z-index: var(--layer-modal);
+}
